<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:text="@string/notification"
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_panel" />
    <Button
        android:text="@string/notification2"
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_panel" />
    <Button
        android:text="@string/take_picture"
        android:id="@+id/take_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_panel" />

    <Button
        android:id="@+id/show_picture"
        android:text="@string/show_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_panel" />

    <Button
        android:id="@+id/delete_picture"
        android:text="@string/delete_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_panel" />

    <ImageView
        android:id="@+id/ImageViewPreview"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        android:src="@drawable/user_pic"
        android:background="@drawable/pic_preview_border" />



    </LinearLayout>
